--- a/app/views/backoffice/config/title/index.html.erb
+++ b/app/views/backoffice/config/title/index.html.erb
@@ -23,7 +23,7 @@
                 </tr>
               </thead>
               <tbody>
-              	<% @titulos.each do |titulo| %>
+              	<% @titulos_site_logado.each do |titulo| %>
 	                <tr>
 	                  <th scope="row"><%= titulo.id %></th>
 	                  <td><%= titulo.title %></td>
