--- a/app/views/backoffice/config/about/edit.html.erb
+++ b/app/views/backoffice/config/about/edit.html.erb
@@ -12,9 +12,10 @@
             <%= t.text_area :description, class:"form-control" %>
 	      </div>
 	      <div class="form-group">
-	        <%= t.label "Site", class: "form-control-label" %>
-            <%= t.text_area :site_id, class:"form-control" %>
-	      </div>
+            <%= t.label "Site", class: "form-control-label" %>   
+            <%= t.collection_select( :site_id, @sites, :id, :name, 
+            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+          </div>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
