--- a/app/views/backoffice/config/title/edit.html.erb
+++ b/app/views/backoffice/config/title/edit.html.erb
@@ -31,6 +31,11 @@
 	        <%= t.label "Texto Principal", class: "form-control-label" %>
             <%= t.text_area :text, class:"form-control" %>
 	      </div>
+	      <div class="form-group">
+            <%= t.label "Site", class: "form-control-label" %>   
+            <%= t.collection_select( :site_id, @sites, :id, :name, 
+            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+          </div>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
