--- a/app/views/backoffice/config/user/edit.html.erb
+++ b/app/views/backoffice/config/user/edit.html.erb
@@ -27,19 +27,19 @@
 	        </div>
 		    <div class="form-group">
 	           <%= t.label "Nome", class: "form-control-label" %>
-	           <%= t.text_field :name, class:"form-control" %>
+	           <%= t.text_field :name, class:"form-control",  required: "required" %>
 		    </div>
 	        <div class="form-group">
 	           <%= t.label "Email", class: "form-control-label" %>
-	           <%= t.text_field :email, class:"form-control" %>
+	           <%= t.text_field :email, class:"form-control",  required: "required" %>
 	        </div>
 	        <div class="form-group">
               <%= t.label "Senha", class: "form-control-label" %>
-              <%= t.text_field :password, class:"form-control" %>
+              <%= t.password_field :password, class: "form-control",  required: "required", type: "password" %>
             </div>
             <div class="form-group">
               <%= t.label "Confirmar senha", class: "form-control-label" %>
-              <%= t.text_field :password_confirmation, class:"form-control" %>
+              <%= t.password_field :password_confirmation, class: "form-control",  required: "required", type: "password" %>
             </div>
 	        <div class="form-group">
 	         <%= t.label "Tipo de acesso", class: "form-control-label" %>
@@ -51,8 +51,9 @@
 			 <% end %>
 			</div>
             <div class="form-group">
-              <%= t.label "Site", class: "form-control-label" %>
-              <%= t.text_field :site_id, class:"form-control" %>
+               <%= t.label "Site", class: "form-control-label" %>   
+               <%= t.collection_select( :site_id, @sites, :id, :name, 
+               {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
             </div>
 	        <div class="form-group">       
 	         <%= t.submit "Salvar", class: "btn btn-primary" %>
