--- a/app/views/backoffice/contact/phone/edit.html.erb
+++ b/app/views/backoffice/contact/phone/edit.html.erb
@@ -27,6 +27,11 @@
             <%= t.label "Telefone", class: "form-control-label" %>
             <%= t.text_field :phone, class:"form-control" %>
 	      </div>
+          <div class="form-group">
+            <%= t.label "Site", class: "form-control-label" %>   
+            <%= t.collection_select( :site_id, @sites, :id, :name, 
+            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+          </div>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
