--- a/app/views/backoffice/product/label/new.html.erb
+++ b/app/views/backoffice/product/label/new.html.erb
@@ -25,14 +25,15 @@
             <%= t.label "Nome", class: "form-control-label" %>
             <%= t.text_field :name, class:"form-control" %>
 	      </div>
-          <div class="form-group">
+        <div class="form-group">
             <%= t.label "Descrição", class: "form-control-label" %>
             <%= t.text_field :description, class:"form-control" %>
-          </div>
-          <div class="form-group">
-            <%= t.label "Site", class: "form-control-label" %>
-            <%= t.text_field :site_id, class:"form-control" %>
-          </div>
+        </div>
+        <div class="form-group">
+            <%= t.label "Site", class: "form-control-label" %>   
+            <%= t.collection_select( :site_id, @sites, :id, :name, 
+            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+        </div>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
