--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -156,7 +156,7 @@
         <span class="heading">Links</span>
         <ul class="list-unstyled">
           <li>
-             <%= link_to lanchonetedotrom_home_index_path do %> 
+             <%= link_to lanchonete_path do %> 
              <i class="fas fa-link"></i>Link do site
             <% end %>
           </li>
