--- a/app/views/backoffice/product/product/index.html.erb
+++ b/app/views/backoffice/product/product/index.html.erb
@@ -16,8 +16,8 @@
                   <th>Nome</th>
                   <th>Descrição</th>
                   <th>Preço</th>
-                  <th>Ativo</th>
-                  <th>Destacado</th>
+                  <th>Mostrar</th>
+                  <th>Destacar</th>
                   <th>Categoria</th>
                   <th>Rótulo</th>
                   <th>Site</th>
