--- a/app/views/backoffice/config/user/index.html.erb
+++ b/app/views/backoffice/config/user/index.html.erb
@@ -1,7 +1,22 @@
 <div class="page-header">
   <div class="container-fluid">
     <h2 class="h5 no-margin-bottom">Administradores do site</h2>
+    <h3><%= notice %></h3>
   </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="block margin-bottom-sm">
+        <div class="input-group">
+          <input type="text" class="form-control">
+          <div class="input-group-append">
+            <button type="button" class="btn btn-primary">Pesquisar</button>
+          </div>
+        </div>
+      </div>
+     </div>
+   </div>
 </div>
 <div class="container-fluid">
     <div class="row">
@@ -24,7 +39,8 @@
               	<% @admins.each do |admin| %>
 	                <tr>
 	                  <th scope="row"><%= admin.id %></th>
-                    <td><img src="<%= admin.photoavatar %>" style="height: 3.8rem;" /></td>
+                    <td>
+                      <div class="avatar"><img src="<%= admin.photoavatar %>" style="height: auto; width: 3.6rem;" class="img-fluid rounded-circle" /></div></td>
 	                  <td><%= admin.name %></td>
                     <td><%= admin.email %></td>
                     <td><%= admin.role_i18n %></td>
@@ -35,7 +51,7 @@
                       <% end %>
                       <%= link_to backoffice_config_user_path(admin), :method => :delete, class: "btn btn-secondary", data: {confirm: "Confirma a exclusão do admin <b>#{admin.name}</b>?"} do %>
                         <i class="icon-close"></i>
-                          <% end %>
+                      <% end %>
                     </td>
 	                </tr>
                 <% end %>
@@ -45,11 +61,15 @@
         </div>
       </div>
     </div>
-     <div class="row">
-        <div style="width: 130px; text-align: center;">
-         <%= link_to new_backoffice_config_user_path, class: "btn btn-primary" do %>
-            <i class="fa fa-plus"></i>
-         <% end %>
-        </div>
-      </div>
   </div>
+  <div class="container-fluid">
+   <div class="row">
+    <div class="col-lg-12">
+      <div class="block margin-bottom-sm">
+       <%= link_to new_backoffice_config_user_path, class: "btn btn-primary" do %>
+          <i class="fa fa-plus"></i>
+       <% end %>
+      </div>
+     </div>
+   </div>
+ </div>  
