--- a/app/views/backoffice/config/title/new.html.erb
+++ b/app/views/backoffice/config/title/new.html.erb
@@ -6,7 +6,7 @@
 <div class="col-lg-12">
 	<div class="block">
 	  <div class="block-body">
-	    <%= form_for([:backoffice, :config, @titulo]) do |t| %>
+	  	<%= form_for @titulo, url: backoffice_config_title_index_path do |t| %>
 	    <div class="form-group">
             <%= t.label "Logo do site", class: "form-control-label" %>
             <%= t.file_field :photologo, class:"form-control" %>
