--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -22,7 +22,7 @@
         <div class="container-fluid d-flex align-items-center justify-content-between">
           <div class="navbar-header">
             <!-- Navbar Header--><a href="index.html" class="navbar-brand">
-              <div class="brand-text brand-big visible text-uppercase"><strong class="text-primary">EF</strong><strong>Admin</strong></div>
+              <div class="brand-text brand-big visible text-uppercase"><strong class="text-primary">EF</strong><strong>Painel</strong></div>
               <div class="brand-text brand-sm"><strong class="text-primary">E</strong><strong>F</strong></div></a>
             <!-- Sidebar Toggle Btn-->
             <button class="sidebar-toggle"><i class="fa fa-long-arrow-left"></i></button>
