--- a/app/views/backoffice/product/product/edit.html.erb
+++ b/app/views/backoffice/product/product/edit.html.erb
@@ -27,7 +27,7 @@
 	      </div>
         <div class="form-group">
             <%= t.label "Descrição", class: "form-control-label" %>
-            <%= t.text_field :description, class:"form-control" %>
+            <%= t.text_area :description, class:"form-control" %>
         </div>
         <div class="form-group">
             <%= t.label "Preço", class: "form-control-label" %>
