--- a/app/views/backoffice/config/about/edit.html.erb
+++ b/app/views/backoffice/config/about/edit.html.erb
@@ -9,7 +9,7 @@
 	    <%= form_for([:backoffice, :config, @about]) do |t| %>
 	      <div class="form-group">
 	        <%= t.label "Descrição", class: "form-control-label" %>
-            <%= t.text_area :description, class:"form-control" %>
+            <%= t.text_area :description, class:"form-control", rows:"10" %>
 	      </div>
 	      <div class="form-group">
             <%= t.label "Site", class: "form-control-label" %>   
