--- a/app/views/backoffice/config/title/edit.html.erb
+++ b/app/views/backoffice/config/title/edit.html.erb
@@ -21,7 +21,7 @@
 	      </div>
 	      <div class="form-group">
 	        <%= t.label "Titulo Principal", class: "form-control-label" %>
-            <%= t.text_field :subtitle, class:"form-control" %>
+            <%= t.text_area :subtitle, class:"form-control" %>
 	      </div>
 	      <div class="form-group">       
 	        <%= t.label "Descrição para Favoritos", class: "form-control-label" %>
@@ -29,7 +29,7 @@
 	      </div>
 	      <div class="form-group">
 	        <%= t.label "Texto Principal", class: "form-control-label" %>
-            <%= t.text_area :text, class:"form-control" %>
+            <%= t.text_area :text, class:"form-control", rows:"5" %>
 	      </div>
 	      <div class="form-group">
             <%= t.label "Site", class: "form-control-label" %>   
