--- a/app/views/backoffice/dashboard/index.html.erb
+++ b/app/views/backoffice/dashboard/index.html.erb
@@ -24,12 +24,12 @@
         <div class="statistic-block block">
           <div class="progress-details d-flex align-items-end justify-content-between">
             <div class="title">
-              <div class="icon"><i class="icon-contract"></i></div><strong>New Projects</strong>
+              <div class="icon"><i class="icon-contract"></i></div><strong>Produtos</strong>
             </div>
-            <div class="number dashtext-2">375</div>
+            <div class="number dashtext-2"><%= @products_count %></div>
           </div>
           <div class="progress progress-template">
-            <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-template dashbg-2"></div>
+            <div role="progressbar" style="width: <%= @products_count %>%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-template dashbg-2"></div>
           </div>
         </div>
       </div>
