--- a/app/views/backoffice/product/observation/new.html.erb
+++ b/app/views/backoffice/product/observation/new.html.erb
@@ -23,7 +23,7 @@
 	    <%= form_for @observation, url: backoffice_product_observation_index_path do |t| %>
 	      <div class="form-group">
             <%= t.label "Descrição", class: "form-control-label" %>
-            <%= t.text_field :description, class:"form-control" %>
+            <%= t.text_area :description, class:"form-control", rows: "5" %>
 	      </div>
         <div class="form-group">
 	        <div class="i-checks">
